# securityhub-findings-summary

./: .env.sample  .gitignore  README.md  count.py  detail.py  diff.py  main.py  pyproject.toml
src/: detail.py  diff.py  get.py  main.py
tests/: test_diff.py
tests/data/: SecurityHub_findings_status_200001010000.csv  SecurityHub_findings_status_200001020000.csv  SecurityHub_findings_status_200001030000.csv  SecurityHub_findings_status_200001040000.csv  SecurityHub_findings_status_200001050000.csv  SecurityHub_findings_status_200001060000.csv  current_findings_1.csv  current_findings_2.csv  current_findings_4.csv  current_findings_5.csv  current_findings_6.csv  summary_1.csv  summary_2.csv  summary_3.csv  summary_4.csv  summary_5.csv  summary_6.csv
